--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src='app/js/mapbox.directions_min.js'></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script>
-<script src='app/app.js'></script>
+<script src='app/app.min.js'></script>
 <link href='app/css/mapbox.css' rel='stylesheet' />
 <!-- <link href='app/css/MarkerCluster.css' rel='stylesheet' />
 <link href='app/css/MarkerCluster.Default.css' rel='stylesheet' /> -->
