--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset=utf-8 />
 <title>Sedona Art Walk Map</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="http://mapblender.com/artwalk/assets/sedona.ico" type="image/x-icon" />
 
 <script src='app/js/mapbox.js'></script>
@@ -15,12 +15,12 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script> -->
-<script src='app/app.js'></script>
+<script src='app/app.min.js'></script>
 <link href='app/css/mapbox.css' rel='stylesheet' />
 <!-- <link href='app/css/MarkerCluster.css' rel='stylesheet' />
 <link href='app/css/MarkerCluster.Default.css' rel='stylesheet' /> -->
 <link href='app/css/font-awesome.min.css' rel='stylesheet' />
-<link href='app/css/app.css' rel='stylesheet' />
+<link href='app/css/app.min.css' rel='stylesheet' />
 
 <script src="app/js/vex.combined.min.js"></script>
 <script>vex.defaultOptions.className = 'vex-theme-os';</script>
