update to styles and accuracy values

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset=utf-8 />
 <title>Sedona Art Walk Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link rel="shortcut icon" href="https://mapblender.com/artwalk/assets/sedona.ico" type="image/x-icon" />
-
+<link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
 <script src='app/js/mapbox.js'></script>
 <script src='app/js/date.js'></script>
 <!-- <script src='app/js/leaflet.markercluster.js'></script> -->
@@ -15,29 +14,26 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script> -->
+<script src="app/js/vex.combined.min.js"></script>
 <script src='app/app.min.js'></script>
 <link href='app/css/mapbox.css' rel='stylesheet' />
 <!-- <link href='app/css/MarkerCluster.css' rel='stylesheet' />
-<link href='app/css/MarkerCluster.Default.css' rel='stylesheet' /> -->
-<link href='app/css/font-awesome.min.css' rel='stylesheet' />
+<link href='app/css/MarkerCluster.Default.css' rel='stylesheet' />-->
+<link href='app/css/font-awesome.min.css' rel='stylesheet' /> 
 <link href='app/css/app.min.css' rel='stylesheet' />
-
-<script src="app/js/vex.combined.min.js"></script>
-<script>vex.defaultOptions.className = 'vex-theme-os';</script>
 <link rel="stylesheet" href="app/css/vex.css" />
 <link rel="stylesheet" href="app/css/vex-theme-os.css" />
 </head>
 <body>
-
 <div class='custom-popup' id='map'></div>
 <div id='loader'><span class='message'></span></div>
 <script>
+vex.defaultOptions.className = 'vex-theme-os';
 startup();
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
 ga('create', 'UA-76998604-1', 'auto');
 ga('send', 'pageview');
 </script>
