--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script> -->
 <script src="app/js/vex.combined.min.js"></script>
-<script src='app/app.min.js'></script>
+<script src='app/app.js'></script>
 <link href='app/css/mapbox.css' rel='stylesheet' />
 <!-- <link href='app/css/MarkerCluster.css' rel='stylesheet' />
 <link href='app/css/MarkerCluster.Default.css' rel='stylesheet' />-->
