--- a/index.html
+++ b/index.html
@@ -2,30 +2,47 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Sedona Art Walk Map</title>
+<title>Walk Sedona</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
+<!-- <script src='app/js/leaflet.markercluster.js'></script>
+<link href='app/css/MarkerCluster.css' rel='stylesheet' />
+<link href='app/css/MarkerCluster.Default.css' rel='stylesheet' />
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/js/bootstrap-select.min.js"></script>
 <script src='app/js/mapbox.js'></script>
 <script src='app/js/date.js'></script>
-<!-- <script src='app/js/leaflet.markercluster.js'></script> -->
 <script src='app/js/L.Control.Locate.min.js'></script>
 <script src='app/js/mapbox.directions_min.js'></script>
 <script src='app/js/leaflet.geometryutil.js'></script>
 <script src='app/js/bowser.min.js'></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script> -->
 <script src="app/js/vex.combined.min.js"></script>
-<script src='app/app.js'></script>
-<link href='app/css/mapbox.css' rel='stylesheet' />
-<!-- <link href='app/css/MarkerCluster.css' rel='stylesheet' />
-<link href='app/css/MarkerCluster.Default.css' rel='stylesheet' />-->
-<link href='app/css/font-awesome.min.css' rel='stylesheet' /> 
+<script src='app/app.min.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/css/bootstrap-select.min.css">
+<link href='app/css/mapbox.css' rel='stylesheet' />
+<link href='app/css/maki-min.css' rel='stylesheet' />
+<link href='app/css/font-awesome.min.css' rel='stylesheet' /> 
 <link rel="stylesheet" href="app/css/vex.css" />
 <link rel="stylesheet" href="app/css/vex-theme-os.css" />
 </head>
 <body>
 <div class='custom-popup' id='map'></div>
+<div id='toolbar'>
+	<select id="search-bar" multiple="multiple">
+	    <option value="gallery" selected data-icon="maki maki-art-gallery" value="Galleries">Galleries</option>
+	    <option value="rest" selected data-icon="maki maki-restaurant" value="Restaurants"> Restaurants</option>
+	    <option value="recycling" data-icon="maki maki-waste-basket" value="Recycling">    Recycling Drop-off Locations</option>
+	    <option value="bus" selected data-icon="maki maki-bus" value="Bus Stops">    Bus Stops</option>
+	    <option value="theatre" selected data-icon="maki maki-cinema" value="Theatre">    Theatre</option>
+	    <option value="museum" selected data-icon="maki maki-museum" value="Museum">    Museum</option>
+	    <option value="park" selected data-icon="maki maki-parking" value="Parking">    Parking</option>
+	    <option value="walk" selected data-icon="maki maki-pitch" value="Suggested Walking Routes">    Suggested Walking Routes</option>
+	</select>
+</div>
 <div id='loader'><span class='message'></span></div>
 <script>
 vex.defaultOptions.className = 'vex-theme-os';
