--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="carousel-inner">
         <div class="item active">
             <div class="row">
-                <div class="col-sm-3"><a href="#" id='125f39b105ade885c1f3a7edb6f936fc' class="thumbnail"><div class="carousel-caption">
+                <div class="col-sm-3"><a href="#" id='b6ceb5d5ce631b6c65fe3e7b612b4ce3' class="thumbnail"><div class="carousel-caption">
     				<p>John Waddell</p>
   					</div><img src="https://walksedona.com/assets/FeaturedArt/Waddell_Ruth.jpg" alt="Image" class="img-"></a>
                 </div>
@@ -122,7 +122,7 @@
     				<p>Nassan Gobran</p>
   					</div><img src="https://walksedona.com/assets/FeaturedArt/Gobran_Peace.jpg" alt="Image" class="img-"></a>
                 </div>
-                <div class="col-sm-3"><a href="#" id='9c9cc65b8a6f4823b82793cc8ae45b45' class="thumbnail"><div class="carousel-caption">
+                <div class="col-sm-3"><a href="#" id='a3a24a58eefb7c3558250fd53da34b39' class="thumbnail"><div class="carousel-caption">
     				<p>John M. Soderberg</p>
   					</div><img src="https://walksedona.com/assets/FeaturedArt/Sacagawea.jpg" alt="Image" class="img-"></a>
                 </div>
@@ -202,7 +202,7 @@
     <!-- Carousel items -->
     <div class="carousel-inner">
         <div class="item active">
-            <div class="col-sm-3"><a href="#" id='125f39b105ade885c1f3a7edb6f936fc' class="thumbnail"><div class="carousel-caption">
+            <div class="col-sm-3"><a href="#" id='b6ceb5d5ce631b6c65fe3e7b612b4ce3' class="thumbnail"><div class="carousel-caption">
 				<p>John Waddell</p>
 					</div><img src="https://walksedona.com/assets/FeaturedArt/Waddell_Ruth.jpg" alt="Image" class="img-"></a>
             </div>
@@ -292,7 +292,7 @@
             </div>
         </div>
         <div class="item">
-            <div class="col-sm-3"><a href="#" id='9c9cc65b8a6f4823b82793cc8ae45b45' class="thumbnail"><div class="carousel-caption">
+            <div class="col-sm-3"><a href="#" id='a3a24a58eefb7c3558250fd53da34b39' class="thumbnail"><div class="carousel-caption">
 				<p>John M. Soderberg</p>
 					</div><img src="https://walksedona.com/assets/FeaturedArt/Sacagawea.jpg" alt="Image" class="img-"></a>
             </div>
@@ -380,6 +380,7 @@
 </div>
 <script>
 vex.defaultOptions.className = 'vex-theme-os';
+//vex.defaultOptions.showCloseButton = true;
 startup();
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
