--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src='app/js/leaflet.geometryutil.js'></script>
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
-<script src='app/app.min.js'></script>
+<script src='app/app.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/css/bootstrap-select.min.css">
