added traffic control

--- a/index_alt.html
+++ b/index_alt.html
@@ -5,12 +5,18 @@
 <title>Walk Sedona</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
+<!-- <script src='app/js/leaflet.markercluster.js'></script>
+<link href='app/css/MarkerCluster.css' rel='stylesheet' />
+<link href='app/css/MarkerCluster.Default.css' rel='stylesheet' />
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v1.3.0/turf.min.js'></script>
+<script src='app/js/mapbox.directions_min.js'></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/js/bootstrap-select.min.js"></script>
 <script src='app/js/mapbox.js'></script>
 <script src='app/js/date.js'></script>
 <script src='app/js/L.Control.Locate.min.js'></script>
+
 <script src='app/js/leaflet.geometryutil.js'></script>
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
