update for default traffic layer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	    <option value="parking" selected data-icon="maki maki-parking maki-lg" value="Parking">    Parking</option>
 	    <option value="pubart" data-icon="maki maki-camera maki-lg" value="Public Art Locations">    Public Art Locations</option>
 	    <option value="walk" selected data-icon="maki maki-pitch maki-lg" value="Suggested Walking Routes">    Suggested Walking Routes</option>
-        <option value="traffic" selected data-icon="maki maki-car maki-lg" value="Real-time Traffic">    Real-time Traffic (red heavy)</option>
+        <option value="traffic" data-icon="maki maki-car maki-lg" value="Real-time Traffic">    Real-time Traffic (red heavy)</option>
 	</select>
 </div>
 <div id='loader'><span class='message'></span></div>
