--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
 <script src='app/js/leaflet.geometryutil.js'></script>
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
-<script src='app/app.js'></script>
+<script src='app/js/customsearch.min.js'></script>
+<script src='app/app.min.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.0/css/bootstrap-select.min.css">
-<link href='app/css/mapbox.css' rel='stylesheet' />
-<link href='app/css/maki-min.css' rel='stylesheet' />
-<link href='app/css/font-awesome.min.css' rel='stylesheet' /> 
-<link rel="stylesheet" href="app/css/vex.css" />
-<link rel="stylesheet" href="app/css/vex-theme-os.css" />
 </head>
 <body>
 <div class='custom-popup' id='map'></div>
