added trailheads and other json changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.min.js'></script>
+<script src='app/app.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
 <body>
@@ -24,11 +24,11 @@
 	<select id="search-bar" multiple="multiple" data-live-search="true" style="display:none">
 	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
-	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">    Recycling Drop-off Locations</option>
+	    <option value="recycling" class="fa fa-recycle" value="Recycling">   &nbsp;&nbsp;  Recycling Drop-off Locations</option>
 	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Bus Stops</option>
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
-        <option value="parks" selected data-icon="maki maki-park maki-lg" value="Parks,Restrooms">    Parks and Restrooms</option>
+        <option value="parks" selected data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
 	    <option value="parking" selected data-icon="maki maki-parking maki-lg" value="Parking">    Parking</option>
 	    <option value="pubart" data-icon="maki maki-camera maki-lg" value="Public Art Locations">    Public Art Locations</option>
 	    <option value="walk" selected data-icon="maki maki-pitch maki-lg" value="Suggested Walking Routes">    Suggested Walking Routes</option>
