--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<select id="search-bar" multiple="multiple" data-live-search="true" style="display:none">
 	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
-	    <option value="recycling" class="fa fa-recycle" value="Recycling">   &nbsp;&nbsp;  Recycling Drop-off Locations</option>
+	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">  Recycling Drop-off Locations</option>
 	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Bus Stops</option>
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
