--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Bus Stops</option>
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
-        <option value="parks" selected data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
+        <option value="parks" data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
 	    <option value="parking" selected data-icon="maki maki-parking maki-lg" value="Parking">    Parking</option>
 	    <option value="pubart" data-icon="maki maki-camera maki-lg" value="Public Art Locations">    Public Art Locations</option>
 	    <option value="walk" selected data-icon="maki maki-pitch maki-lg" value="Suggested Walking Routes">    Suggested Walking Routes</option>
