--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Walk Sedona</title>
+<title>Sedona Northern Lights | Walk Sedona</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -22,6 +22,7 @@
 <div class='custom-popup' id='map'></div>
 <div id='toolbar'>
 	<select id="search-bar" multiple="multiple" data-live-search="true" style="display:none">
+        <option value="snl" selected data-icon="maki maki-star-stroked maki-lg" value="Sedona Northern Lights">    Sedona Northern Lights</option>
 	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
 	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">  Recycling Drop-off Locations</option>
