added public art stuff

--- a/index.html
+++ b/index.html
@@ -179,6 +179,38 @@
                 </div>
             </div>
         </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d45' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/cornerstone.jpg" alt="Image" class="img-"></a>
+                </div>
+                <div class="col-sm-3"><a href="#" id='b84eee31ab290165b169afce6976a055' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/athena.jpg" alt="Image" class="img-"></a>
+                </div>
+                <div class="col-sm-3"><a href="#" id='125f39b105ade885c1f3a7edb6f93665' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/chaos_kinetic.jpg" alt="Image" class="img-"></a>
+                </div>
+                <div class="col-sm-3"><a href="#" id='9020513676d3e6fbe10dc167defcf75' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/church.jpg" alt="Image" class="img-"></a>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="row">
+                <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d15' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/chisel.jpg" alt="Image" class="img-"></a>
+                </div>
+                <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d25' class="thumbnail"><div class="carousel-caption">
+                    <p>James N. Muir</p>
+                    </div><img src="https://walksedona.com/assets/FeaturedArt/fisherboy.jpg" alt="Image" class="img-"></a>
+                </div>
+            </div>
+        </div>
     </div>
 	   <a class="left carousel-control" href="#pubartCarousel" role="button" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -358,6 +390,42 @@
             <div class="col-sm-3"><a href="#" id='9020513676d3e6fbe10dc167defcf3c0' class="thumbnail"><div class="carousel-caption">
 				<p>August K. Strotz</p>
 					</div><img src="https://walksedona.com/assets/FeaturedArt/sedona-chapel.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d45' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/cornerstone.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='b84eee31ab290165b169afce6976a055' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/athena.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='125f39b105ade885c1f3a7edb6f93665' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/chaos_kinetic.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='9020513676d3e6fbe10dc167defcf75' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/church.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d15' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/chisel.jpg" alt="Image" class="img-"></a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="col-sm-3"><a href="#" id='c0fc1d690dae5d5a4b0fc3faf0b35d25' class="thumbnail"><div class="carousel-caption">
+                <p>James N. Muir</p>
+                </div><img src="https://walksedona.com/assets/FeaturedArt/fisherboy.jpg" alt="Image" class="img-"></a>
             </div>
         </div>
 	   <a class="left carousel-control" href="#pubartCarouselmobile" role="button" data-slide="prev">
