update for parking layer live

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.js'></script>
+<script src='app/app.min.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
 <body>
@@ -29,7 +29,7 @@
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
         <option value="parks" data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
-	    <option value="parking" selected data-icon="maki maki-parking maki-lg" value="Parking">    Parking</option>
+	    <option value="parking" data-icon="maki maki-parking maki-lg" value="Parking">    Parking</option>
 	    <option value="pubart" data-icon="maki maki-camera maki-lg" value="Public Art Locations">    Public Art Locations</option>
 	    <option value="walk" selected data-icon="maki maki-pitch maki-lg" value="Suggested Walking Routes">    Suggested Walking Routes</option>
         <option value="traffic" data-icon="maki maki-car maki-lg" value="Real-time Traffic">    Real-time Traffic (red heavy)</option>
