--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Walk Sedona</title>
+<title>Get Around Sedona!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="shortcut icon" href="https://walksedona.com/assets/sedona.ico" type="image/x-icon" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -25,7 +25,7 @@
 	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
 	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">  Recycling Drop-off Locations</option>
-	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Bus Stops</option>
+	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Public Transportation</option>
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
         <option value="parks" data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
