--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
 	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">  Recycling Drop-off Locations</option>
-	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Bus Stops</option>
+	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Public Transportation</option>
 	    <option value="theatre" selected data-icon="maki maki-cinema maki-lg" value="Theatre">    Theatre</option>
 	    <option value="museum" selected data-icon="maki maki-museum maki-lg" value="Museum">    Museum</option>
         <option value="parks" data-icon="maki maki-park maki-lg" value="Parks,Restrooms,trailheads,trails">    Parks and Trailheads</option>
