no search results message

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <li data-value="pubart" data-icon="maki maki-camera maki-lg">    Public Art Locations</li>
     <li data-value="walk" data-selected="true" data-icon="maki maki-pitch maki-lg">    Suggested Walking Routes</li>
     <li data-value="traffic" data-icon="maki maki-car maki-lg">    Real-time Traffic (red heavy)</li>
+    <li id="no-results" style="display: none;"></li>
   </ul>
 </div>
 <button id="hamburger" class="hamburger hamburger--squeeze" type="button" onclick="toggleNav()">
