remove some relics

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 </head>
 <body>
 <div id="side-menu">
-  <input type="text" id="search-select-bar" />
+  <div id="side-menu-header"></div>
+  <div id="search-bar-div" class="input-group">
+    <div class="input-group-addon">X</div>
+    <input type="text" id="search-select-bar" class="form-control" />
+  </div>
   <ul id="search-select-list">
     <li data-value="gallery" data-selected="true" data-icon="maki maki-art-gallery maki-lg">Galleries</li>
     <li data-value="rest" data-selected="true" data-icon="maki maki-restaurant maki-lg"> Restaurants</li>
