--- a/index.html
+++ b/index.html
@@ -20,25 +20,24 @@
 </head>
 <body>
 <div id="side-menu">
-  <div id="side-menu-header"></div>
-  <div id="search-bar-div" class="input-group">
-    <div class="input-group-addon">X</div>
-    <input type="text" id="search-select-bar" class="form-control" />
-  </div>
-  <ul id="search-select-list">
-    <li data-value="gallery" data-selected="true" data-icon="maki maki-art-gallery maki-lg">Galleries</li>
-    <li data-value="rest" data-selected="true" data-icon="maki maki-restaurant maki-lg"> Restaurants</li>
-    <li data-value="recycling" data-icon="maki maki-waste-basket maki-lg">  Recycling Drop-off Locations</li>
-    <li data-value="bus" data-selected="true" data-icon="maki maki-bus maki-lg">    Public Transportation</li>
-    <li data-value="theatre" data-selected="true" data-icon="maki maki-cinema maki-lg">    Theatre</li>
-    <li data-value="museum" data-selected="true" data-icon="maki maki-museum maki-lg">    Museum</li>
-    <li data-value="parks" data-icon="maki maki-park maki-lg">    Parks and Trailheads</li>
-    <li data-value="parking" data-icon="maki maki-parking maki-lg">    Parking</li>
-    <li data-value="pubart" data-icon="maki maki-camera maki-lg">    Public Art Locations</li>
-    <li data-value="walk" data-selected="true" data-icon="maki maki-pitch maki-lg">    Suggested Walking Routes</li>
-    <li data-value="traffic" data-icon="maki maki-car maki-lg">    Real-time Traffic (red heavy)</li>
-    <li id="no-results" style="display: none;"></li>
-  </ul>
+    <div id="side-menu-header"></div>
+    <div id="search-bar-div">
+        <input type="text" id="search-select-bar" class="form-control" placeholder="Filter Locations..." />
+    </div>
+    <ul id="search-select-list">
+        <li data-value="gallery" data-selected="true" data-icon="maki maki-art-gallery maki-lg">Galleries</li>
+        <li data-value="rest" data-selected="true" data-icon="maki maki-restaurant maki-lg"> Restaurants</li>
+        <li data-value="recycling" data-icon="maki maki-waste-basket maki-lg">  Recycling Drop-off Locations</li>
+        <li data-value="bus" data-selected="true" data-icon="maki maki-bus maki-lg">    Public Transportation</li>
+        <li data-value="theatre" data-selected="true" data-icon="maki maki-cinema maki-lg">    Theatre</li>
+        <li data-value="museum" data-selected="true" data-icon="maki maki-museum maki-lg">    Museum</li>
+        <li data-value="parks" data-icon="maki maki-park maki-lg">    Parks and Trailheads</li>
+        <li data-value="parking" data-icon="maki maki-parking maki-lg">    Parking</li>
+        <li data-value="pubart" data-icon="maki maki-camera maki-lg">    Public Art Locations</li>
+        <li data-value="walk" data-selected="true" data-icon="maki maki-pitch maki-lg">    Suggested Walking Routes</li>
+        <li data-value="traffic" data-icon="maki maki-car maki-lg">    Real-time Traffic (red heavy)</li>
+        <li id="no-results" style="display: none;"></li>
+    </ul>
 </div>
 <button id="hamburger" class="hamburger hamburger--squeeze" type="button" onclick="toggleNav()">
     <span class="hamburger-box">
