sidebar scroll behavior, switch to ems

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 </head>
 <body>
 <div id="side-menu">
-    <div id="side-menu-header"></div>
-    <div id="search-bar-div">
-        <input type="text" id="search-select-bar" class="form-control" placeholder="Filter Locations..." />
+    <div id="side-menu-header">
+        <div id="side-menu-header-spacer"></div>
+        <div id="search-bar-div">
+            <input type="text" id="search-select-bar" class="form-control" placeholder="Filter Locations..." />
+        </div>
     </div>
     <ul id="search-select-list">
         <li data-value="gallery" data-selected="true" data-icon="maki maki-art-gallery maki-lg">Galleries</li>
