add sidebar title

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div id="side-menu">
     <div id="side-menu-header">
         <div id="side-menu-header-spacer"></div>
+        <div id="side-menu-header-title">Select Location Types</div>
         <div id="search-bar-div">
             <input type="text" id="search-select-bar" class="form-control" placeholder="Filter Locations..." />
         </div>
