add sidebar icons

--- a/index.html
+++ b/index.html
@@ -28,17 +28,50 @@
         </div>
     </div>
     <ul id="search-select-list">
-        <li data-value="gallery" data-selected="true" data-icon="maki maki-art-gallery maki-lg">Galleries</li>
-        <li data-value="rest" data-selected="true" data-icon="maki maki-restaurant maki-lg"> Restaurants</li>
-        <li data-value="recycling" data-icon="maki maki-waste-basket maki-lg">  Recycling Drop-off Locations</li>
-        <li data-value="bus" data-selected="true" data-icon="maki maki-bus maki-lg">    Public Transportation</li>
-        <li data-value="theatre" data-selected="true" data-icon="maki maki-cinema maki-lg">    Theatre</li>
-        <li data-value="museum" data-selected="true" data-icon="maki maki-museum maki-lg">    Museum</li>
-        <li data-value="parks" data-icon="maki maki-park maki-lg">    Parks and Trailheads</li>
-        <li data-value="parking" data-icon="maki maki-parking maki-lg">    Parking</li>
-        <li data-value="pubart" data-icon="maki maki-camera maki-lg">    Public Art Locations</li>
-        <li data-value="walk" data-selected="true" data-icon="maki maki-pitch maki-lg">    Suggested Walking Routes</li>
-        <li data-value="traffic" data-icon="maki maki-car maki-lg">    Real-time Traffic (red heavy)</li>
+        <li data-value="gallery" data-selected="true">
+          <span class="maki maki-art-gallery maki-lg"></span>
+          <div>&nbsp;Galleries</div>
+        </li>
+        <li data-value="rest" data-selected="true">
+          <span class="maki maki-restaurant maki-lg"></span>
+          <div>&nbsp;Restaurants</div>
+        </li>
+        <li data-value="recycling">
+          <span class="glyphicon maki maki-waste-basket maki-lg"></span>
+          <div>&nbsp;Recycling Drop-off Locations</div>
+        </li>
+        <li data-value="bus" data-selected="true">
+          <span class="maki maki-bus maki-lg"></span>
+          <div>&nbsp;Public Transportation</div>
+        </li>
+        <li data-value="theatre" data-selected="true">
+          <span class="maki maki-cinema maki-lg"></span>
+          <div>&nbsp;Theatre</div>
+        </li>
+        <li data-value="museum" data-selected="true">
+          <span class="maki maki-museum maki-lg"></span>
+          <div>&nbsp;Museum</div>
+        </li>
+        <li data-value="parks">
+          <span class="maki maki-park maki-lg"></span>
+          <div>&nbsp;Parks and Trailheads</div>
+        </li>
+        <li data-value="parking">
+          <span class="maki maki-parking maki-lg"></span>
+          <div>&nbsp;Parking</div>
+        </li>
+        <li data-value="pubart">
+          <span class="maki maki-camera maki-lg"></span>
+          <div>&nbsp;Public Art Locations</div>
+        </li>
+        <li data-value="walk" data-selected="true">
+          <span class="maki maki-pitch maki-lg"></span>
+          <div>&nbsp;Suggested Walking Routes</div>
+        </li>
+        <li data-value="traffic">
+          <span class="maki maki-car maki-lg"></span>
+          <div>&nbsp;Real-time Traffic (red heavy)</div>
+        </li>
         <li id="no-results" style="display: none;"></li>
     </ul>
 </div>
