add slider switches

--- a/index.html
+++ b/index.html
@@ -29,48 +29,125 @@
     </div>
     <ul id="search-select-list">
         <li data-value="gallery" data-selected="true">
-          <span class="maki maki-art-gallery maki-lg"></span>
-          <div>&nbsp;Galleries</div>
+            <div class="switch-label">
+                <span class="maki maki-art-gallery maki-lg"></span>
+                <div>&nbsp;Galleries</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="rest" data-selected="true">
-          <span class="maki maki-restaurant maki-lg"></span>
-          <div>&nbsp;Restaurants</div>
+            <div class="switch-label">
+                <span class="maki maki-restaurant maki-lg"></span>
+                <div>&nbsp;Restaurants</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="recycling">
-          <span class="glyphicon maki maki-waste-basket maki-lg"></span>
-          <div>&nbsp;Recycling Drop-off Locations</div>
+            <div class="switch-label">
+              <span class="glyphicon maki maki-waste-basket maki-lg"></span>
+              <div>&nbsp;Recycling Drop-off Locations</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="bus" data-selected="true">
-          <span class="maki maki-bus maki-lg"></span>
-          <div>&nbsp;Public Transportation</div>
+            <div class="switch-label">
+                <span class="maki maki-bus maki-lg"></span>
+                <div>&nbsp;Public Transportation</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="theatre" data-selected="true">
-          <span class="maki maki-cinema maki-lg"></span>
-          <div>&nbsp;Theatre</div>
+            <div class="switch-label">
+                <span class="maki maki-cinema maki-lg"></span>
+                <div>&nbsp;Theatre</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="museum" data-selected="true">
-          <span class="maki maki-museum maki-lg"></span>
-          <div>&nbsp;Museum</div>
+            <div class="switch-label">
+                <span class="maki maki-museum maki-lg"></span>
+                <div>&nbsp;Museum</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="parks">
-          <span class="maki maki-park maki-lg"></span>
-          <div>&nbsp;Parks and Trailheads</div>
+            <div class="switch-label">
+                <span class="maki maki-park maki-lg"></span>
+                <div>&nbsp;Parks and Trailheads</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="parking">
-          <span class="maki maki-parking maki-lg"></span>
-          <div>&nbsp;Parking</div>
+            <div class="switch-label">
+                <span class="maki maki-parking maki-lg"></span>
+                <div>&nbsp;Parking</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="pubart">
-          <span class="maki maki-camera maki-lg"></span>
-          <div>&nbsp;Public Art Locations</div>
+            <div class="switch-label">
+                <span class="maki maki-camera maki-lg"></span>
+                <div>&nbsp;Public Art Locations</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="walk" data-selected="true">
-          <span class="maki maki-pitch maki-lg"></span>
-          <div>&nbsp;Suggested Walking Routes</div>
+            <div class="switch-label">
+                <span class="maki maki-pitch maki-lg"></span>
+                <div>&nbsp;Suggested Walking Routes</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li data-value="traffic">
-          <span class="maki maki-car maki-lg"></span>
-          <div>&nbsp;Real-time Traffic (red heavy)</div>
+            <div class="switch-label">
+                <span class="maki maki-car maki-lg"></span>
+                <div>&nbsp;Real-time Traffic (red heavy)</div>
+            </div>
+
+            <label class="switch ">
+                <input type="checkbox" class="default">
+                <span class="slider round"></span>
+            </label>
         </li>
         <li id="no-results" style="display: none;"></li>
     </ul>
