--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <script src='app/js/bowser.min.js'></script>
 <script src="app/js/vex.combined.min.js"></script>
 <script src='app/js/customsearch.min.js'></script>
-<script src='app/app.min.js'></script>
+<script src='app/app.js'></script>
 <link href='app/css/app.min.css' rel='stylesheet' />
 </head>
 <body>
 <div class='custom-popup' id='map'></div>
 <div id='toolbar'>
 	<select id="search-bar" multiple="multiple" data-live-search="true" style="display:none">
-	    <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
+	    <option value="lodge" selected data-icon="maki maki-lodging maki-lg" value="Lodging">Lodging</option>
+        <option value="gallery" selected data-icon="maki maki-art-gallery maki-lg" value="Galleries">Galleries</option>
 	    <option value="rest" selected data-icon="maki maki-restaurant maki-lg" value="Restaurants"> Restaurants</option>
 	    <option value="recycling" data-icon="maki maki-waste-basket maki-lg" value="Recycling">  Recycling Drop-off Locations</option>
 	    <option value="bus" selected data-icon="maki maki-bus maki-lg" value="Bus Stops">    Public Transportation</option>
